# smb-zfs

./: .gitignore  README.md  pyproject.toml  setup.py  smb-zfs
.github/workflows/: auto-merge-dependabot.yml  auto-release.yml  lint.yml  lint_and_test.yml  pypi.yml  release.yml  system_test.yml
completion/: smb-zfs  smb-zfs-completion.sh  smb-zfs-wizard-completion.sh
debian/: changelog  control  copyright  install  rules
debian/source/: options
lib/: cmd_create_group.sh  cmd_create_share.sh  cmd_create_user.sh  cmd_delete_group.sh  cmd_delete_share.sh  cmd_delete_user.sh  cmd_install.sh  cmd_list_groups.sh  cmd_list_shares.sh  cmd_list_users.sh  cmd_modify_group.sh  cmd_modify_setup.sh  cmd_modify_share.sh  cmd_passwd.sh  cmd_uninstall.sh  create_avahi_conf.sh  create_smb_conf.sh  state_handling.sh  utils.sh
smb-zfs/: smb_zfs.py  state_manager.py  system.py  zfs.py
smb-zfs-py/: __init__.py  config_generator.py
smb_zfs/: __init__.py  cli.py  config_generator.py  errors.py  pw_utils.py  smb_zfs.py  smb_zfs_wizard.py  state_manager.py  system.py  utils.py  zfs.py
test/system/: conftest.py  test_cli_comprehensive.py  test_cli_crud.py  test_cli_edge_cases.py  test_cli_setup_and_remove.py  test_create_and_delete.py  test_modify.py  test_setup_and_remove.py  test_wizard_crud.py  test_wizard_setup_and_remove.py
