[project]
name = "smb-zfs"
dynamic = ["version"]
requires-python = ">=3.10"
authors = [{ name = "Nils Stein", email = "github.nstein@mailbox.org" }]
description = "A tool to manage Samba on a ZFS-backed system."
readme = "README.md"
license-files = ["LICENSE"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Programming Language :: Python :: 3',
    'Operating System :: POSIX :: Linux',
]
keywords = ["zfs", "samba", "debian"]

[project.urls]
Homepage = "https://github.com/mietzen/smb-zfs"
Issues = "https://github.com/mietzen/smb-zfs/issues"

[project.scripts]
smb-zfs = "smb_zfs.cli:main"
smb-zfs-wizard = "smb_zfs.smb_zfs_wizard:main"

[build-system]
requires = ["setuptools>=77.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["smb_zfs"]

[tool.setuptools_scm]

[tool.stdeb]
# This field lists the Debian packages that must be installed for your
# application to run. The ${python3:Depends} variable is a placeholder
# that stdeb will replace with the correct Python 3 dependency (e.g., python3).
Depends = "samba, zfs-utils, avahi-daemon, ${python3:Depends}"

# This tells stdeb to use the Python 3 interpreter.
Python3-Version = ">="