[project]
name = "smb-zfs"
dynamic = ["version"]
requires-python = ">=3.10"
authors = [{ name = "Nils Stein", email = "github.nstein@mailbox.org" }]
description = "A tool to manage Samba on a ZFS-backed system."
readme = "README.md"
license = { file = "LICENSE.txt" }
classifiers = [
    'Development Status :: 4 - Beta',
    'Programming Language :: Python :: 3',
    'Operating System :: POSIX :: Linux',
]
keywords = ["zfs", "samba", "debian"]

[project.urls]
Homepage = "https://github.com/mietzen/smb-zfs"
Issues = "https://github.com/mietzen/smb-zfs/issues"

[project.scripts]
smb-zfs = "smb_zfs.cli:main"

[build-system]
requires = ["setuptools>=77.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
license-files = ["LICENSE.txt"]
packages = ["smb_zfs"]

[tool.setuptools_scm]
